# fusion-pixel-font

./: .gitignore  CNAME  LICENSE-MIT  LICENSE-OFL  README.md  alphabet-10px-monospaced.html  alphabet-10px-proportional.html  alphabet-12px-monospaced.html  alphabet-12px-proportional.html  alphabet-8px-monospaced.html  alphabet-8px-proportional.html  alphabet.html  build.py  demo-10px.html  demo-12px.html  demo-8px.html  index.html  main.py  playground.html  publish.py  pyproject.toml  requirements.txt
assets/: dump-configs.yaml  dump-configs.yml  fallback-configs.yaml  fallback-configs.yml  update-configs.yaml  update-configs.yml
configs/: __init__.py  ark_pixel_config.py  download_config.py  dump_config.py  fallback_config.py  font_config.py  path_define.py  update_config.py  workspace_define.py
docs/: cases.md  font-info-10px-monospaced.md  font-info-10px-proportional.md  font-info-12px-monospaced.md  font-info-12px-proportional.md  font-info-8px-monospaced.md  font-info-8px-proportional.md  font-info-monospaced.md  font-info-proportional.md  font-info.md  info-10px-monospaced.md  info-10px-proportional.md  info-12px-monospaced.md  info-12px-proportional.md  info-8px-monospaced.md  info-8px-proportional.md  logo.aseprite
services/: design_service.py  dump_service.py  font_service.py  html_service.py  image_service.py  info_service.py  publish_service.py  template_service.py  update_service.py
tasks/: deploy_www.py  dump_fonts.py  make_fallback.py  make_fonts.py  update_docs.py  update_fonts.py
tools/: build.py  build_www.py  check.py  cli.py  dump_fonts.py  (+11 more)
(+124 files in other folders)
