[project]
name = "fusion-pixel-font"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "pixel-font-builder==0.0.41",
    "pixel-font-knife==0.0.19",
    "fonttools[woff]==4.60.1",
    "unidata-blocks==0.0.23",
    "character-encoding-utils==0.0.11",
    "pyyaml==6.0.3",
    "pillow==12.0.0",
    "beautifulsoup4==4.14.2",
    "jinja2==3.1.6",
    "httpx[http2]==0.28.1",
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "cyclopts==3.24.0",
]
