[project]
name = "fusion-pixel-font"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "pixel-font-builder==0.0.47",
    "pixel-font-knife==0.0.20",
    "fonttools[woff]==4.61.1",
    "unicodedata2==17.0.0",
    "unidata-blocks==0.0.23",
    "character-encoding-utils==0.0.11",
    "pyyaml==6.0.3",
    "pillow==12.1.0",
    "beautifulsoup4==4.14.3",
    "jinja2==3.1.6",
    "httpx[http2]==0.28.1",
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "cyclopts==4.4.3",
]
